# the-tribunal

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SYNTHESIS_SUMMARY.md  api-docs  card-1769196545475.html  card-1769196551165.html  card-1769196553478.html  card-1769196559315.html  card-1769196561381.html  card-1769196564333.html  generic-component-1769176172617.html  navigation-1769176169162.html  navigation-1769176175572.html  navigation-1769176180751.html  package-lock.json  package.json  voice_agent_architecture
backend/: .env.example  .importlinter  .importlinter-enforced  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  ez_pixel_init.py  openapi.json  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 03876dc32a6c_add_offers_table_and_campaign_offer_id.py  1963647ee64e_merge_multiple_alembic_heads.py  20260605_add_agent_transfer_settings.py  20260605_add_roleplay_practice_arena.py  20260610_add_call_payments.py  20260610_caller_memory.py  20260611_inbound_screening.py  20260612_automation_events.py  32440f2a725e_add_workspace_invitations.py  a1b2c3d4e5f6_add_campaign_reports.py  (+68 more)
backend/app/: __init__.py  main.py
backend/scripts/: backfill_prompt_stats.py  create_demo_agent.py  create_vertical_agent.py  fix_contact_names.py  inspect_dlq.py  manage_demo_agent.sh  roleplay_smoke.py  setup_prestyj_founding_cohort.py  test_voice_booking.py  update-demo-agent.sh  update_demo_agents_grok.py  verify_returning_caller.py
backend/tests/: __init__.py  conftest.py  factories.py  test_contact_ai_assignment_imessage.py  test_crm_assistant_offer_tools.py  test_env_drift.py  test_lead_magnet_delivery.py  test_review_rating_gate.py
(+1319 files in other folders)
